# sophia_summit_presentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: dumbell_viz.ipynb  slide10_concept_algebra.ipynb  slide10_concept_algebra_minimal.ipynb  slide10_static_embeddings.ipynb  slide10_static_embeddings_prettified.ipynb  slide12_top_activations.ipynb  slide14_feature_visualization.ipynb  slide15_class_vis.ipynb  slide15_class_visualization.ipynb
scripts/: slide10_concept_algebra.py  slide12_top_activations.py  slide14_feature_visualization.py  slide15_class_visualization.py  slide25_arithmetic_in_image_gen.py
